--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.3",
   "description": "Library for creation and manipulation of finite automata",
   "author": "bakkot",
-  "homepage": "https://github.com/shapesecurity/shift-parser-js",
+  "homepage": "https://github.com/bakkot/dfa-lib",
   "repository": {
     "type": "git",
     "url": "https://github.com/bakkot/dfa-lib.git"
   },
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "cfgrammar-tool": "^1.0.0"
+  },
   "directories": {},
   "main": "index.js",
-  "homepage": "https://github.com/bakkot/dfa-lib",
   "keywords": [
     "automata",
     "dfa",
